--- a/server/webapp/WEB-INF/rails.new/app/views/pipelines_history/_material_revisions_popup.html.erb
+++ b/server/webapp/WEB-INF/rails.new/app/views/pipelines_history/_material_revisions_popup.html.erb
@@ -1,43 +1,46 @@
+
+
 <div class="build-cause-summary-container">
-  <table>
-    {var materials = new MaterialArray(materialRevisions)}
-    {for material in materials.all}
-    <tbody>
-    <tr>
-      <th colspan="3" class="last highlight-${%material.changed%}">${% material.name() %}</th>
-    </tr>
-    {for modification in material.modifications}
-    {if material.shouldRenderModifications()}
-    <tr>
-      <td class="highlight-${%material.changed%} user">${% modification.user %}</td>
-      <td class="highlight-${%material.changed%} comment">
-        {if material.isPackage()}
-          {if modification.comment != null && modification.comment != ""}
-            {var comment_map = JSON.parse(modification.comment)}
-            {if comment_map.COMMENT != null}
-              ${%comment_map.COMMENT%}<br/>
-            {/if}
-            {if comment_map.TRACKBACK_URL != null}
-              Trackback: <a href="${%comment_map.TRACKBACK_URL%}">${%comment_map.TRACKBACK_URL%}</a>
-            {else}
-            Trackback: Not Provided
-            {/if}
-          {/if}
-        {else}
-          ${% modification.comment.replace(/\n/g,"<br>") %}
-        {/if}
-      </td>
-      <td class="last_highlight-${%material.changed%} revision">${% modification.revision %}</td>
-    </tr>
-    {else}
-    <tr>
-      <td colspan="3" class="last_highlight-${%material.changed%} revision">
-        <a href="<%="#{root_path}${% material.revision_href %}"%>">${% material.revision %}</a>
-      </td>
-    </tr>
+    <table>
+        {var materials = new MaterialArray(materialRevisions)}
+        {for material in materials.all}
+        <tbody>
+        <tr>
+            <th colspan="3" class="last highlight-${%material.changed%}">${% material.name() %}</th>
+        </tr>
+        {for modification in material.modifications}
+        {if material.shouldRenderModifications()}
+        <tr>
+            <td class="highlight-${%material.changed%} user">${% modification.user %}</td>
+            <td class="highlight-${%material.changed%} comment">
+                {if material.isPackage()}
+                
+
+{if modification.comment != null && modification.comment != ""}
+    {var comment_map = JSON.parse(modification.comment)}
+    {if comment_map.COMMENT != null}
+        ${%comment_map.COMMENT%}<br/>
     {/if}
-    {/for}
-    </tbody>
-    {/for}
-  </table>
+    {if comment_map.TRACKBACK_URL != null}
+        Trackback: <a href="${%comment_map.TRACKBACK_URL%}">${%comment_map.TRACKBACK_URL%}</a>
+    {else}
+        Trackback: Not Provided
+    {/if}
+{/if}                {else}
+                    ${% modification.comment.replace(/\n/g,"<br>") %}
+                {/if}
+            </td>
+            <td class="last_highlight-${%material.changed%} revision">${% modification.revision %}</td>
+        </tr>
+        {else}
+        <tr>
+            <td colspan="3" class="last_highlight-${%material.changed%} revision">
+                <a href="<%="#{root_path}${% material.revision_href %}"%>">${% material.revision %}</a>
+            </td>
+        </tr>
+        {/if}
+        {/for}
+        </tbody>
+        {/for}
+    </table>
 </div>
