#000 - WIP - Fix small issues

--- a/server/webapp/WEB-INF/rails.new/app/views/pipelines_history/index.html.erb
+++ b/server/webapp/WEB-INF/rails.new/app/views/pipelines_history/index.html.erb
@@ -110,8 +110,7 @@
 
     dashboard_periodical_executer.start();
 
-    //TODO: fix this
-    <% if($pipeline_comment_feature_toggle_key) %>
+    <% if(@pipeline_comment_feature_enabled) %>
       var PipelineHistoryComment = initPipelineHistoryComment(jQuery, Modalbox, dashboard_periodical_executer);
     <% end %>
     </script>
