[CONFIG_SPA] UI fixes and ability to toggle between old and new edit page
* Provide links on pipeline edit pages to toggle between old and new views
* Added warning while editing a global scm and option to list the
  pipelines refering to the scm.
* Added a ErrorsWidget for listing validation errors.

--- a/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/pipeline_configs/_materials.scss
+++ b/server/webapp/WEB-INF/rails.new/app/assets/new_stylesheets/single_page_apps/pipeline_configs/_materials.scss
@@ -123,7 +123,7 @@
 }
 
 .scm-plugin-modal {
-  width: 400px;
+  width: 550px;
   .key-value {
     margin-bottom: 10px;
   }
@@ -133,6 +133,9 @@
   }
   .modal-content {
     padding: 0 20px;
+  }
+  .modal-body {
+    width: 400px;
   }
   .callout {
     margin-bottom: 20px;
