WIP: AuthConfig and RoleConfig SPA Verify connection check added for auth config Added spa under admin menu Added clone support

--- a/server/webapp/WEB-INF/rails.new/app/views/navigation_elements/_dropdown_admin.html.erb
+++ b/server/webapp/WEB-INF/rails.new/app/views/navigation_elements/_dropdown_admin.html.erb
@@ -28,3 +28,9 @@
 <li role="presentation">
   <%= link_to "Package Repositories", package_repositories_new_path -%>
 </li>
+<li role="presentation">
+  <%= link_to "Authorization Configuration", admin_security_auth_configs_path -%>
+</li>
+<li role="presentation">
+  <%= link_to "Role Configuration", admin_security_roles_path -%>
+</li>
