--- a/server/webapp/WEB-INF/rails.new/app/views/shared/_dropdown_admin.html.erb
+++ b/server/webapp/WEB-INF/rails.new/app/views/shared/_dropdown_admin.html.erb
@@ -26,3 +26,9 @@
 <li role="presentation">
     <%= link_to l.string("PACKAGE_REPOSITORY_TAB"), main_app.package_repositories_new_path -%>
 </li>
+<li role="presentation">
+  <%= link_to "Authorization Configuration", admin_security_auth_configs_path -%>
+</li>
+<li role="presentation">
+  <%= link_to "Role Configuration", admin_security_roles_path -%>
+</li>
